# python-behave-bdd-demo

./: .gitignore  README.md  pyproject.toml
features/: bdd-demo.feature  uk-postcode.feature
features/steps/: bdd-demo.py  uk-postcode.py
python_behave_bdd_demo/: demo_app.py  uk_postcode_checker.py
