[tool.poetry]
name = "python-behave-bdd-demo"
version = "0.1.0"
package-mode = false
description = "A simple BDD demonstration project"
authors = ["Philip Smith <fripsumisu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
behave = "^1.2.6"
requests = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

